5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1582_1333.log
== SUBMITION (2019-03-16 23:17:45) 
-- CODE:
expressao =30-3**2=8//3**2*10
print(expressao)
-- EXECUTION TIME:
0.148911
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao =30-3**2=8//3**2*10
              ^
SyntaxError: can't assign to operator

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:16:44) 
-- CODE:
expressao =30-3**2=8//3**2*10
print(21)
-- EXECUTION TIME:
0.121574
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao =30-3**2=8//3**2*10
              ^
SyntaxError: can't assign to operator

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:16:44) 
-- CODE:
expressao =30-3**2=8//3**2*10
print(21)
-- EXECUTION TIME:
0.129286
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao =30-3**2=8//3**2*10
              ^
SyntaxError: can't assign to operator

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:17:24) 
-- CODE:
expressao =30 - 3 ** 2 + 8 // 3 ** 2 * 10
print(21)
-- EXECUTION TIME:
0.124755
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 02:01:53) 
-- CODE:
expressao =30 - 3 ** 2 + 8 // 3 ** 2 * 10
print(21)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 02:01:54) 
-- CODE:
expressao =30 - 3 ** 2 + 8 // 3 ** 2 * 10
print(21)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-19 02:02:03) 
-- CODE:
expressao =30 - 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- EXECUTION TIME:
0.128698
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-19 02:02:06) 
-- CODE:
expressao =30 - 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- EXECUTION TIME:
0.196387
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 02:02:07) 
-- CODE:
expressao =30 - 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
